# north-africa-wargame-journal

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  run_simulation.py
data/: assets.json
data/extracted/: counters.json  hex_grid.json  rules_tables.json  unit_placements.json
data/map/: hexes.json  locations.json
data/rules/: cna_rules.txt  cna_rules_index.json
data/units/: allied_air.json  allied_ground.json  axis_air.json  axis_ground.json  supply.json
data/vassal/: buildFile.xml
journal/: README.md  allied_commander.md  axis_commander.md  board_state.md  setup_ruling.md  turn_001_1940-09-09.md  turn_002_1940-09-16.md  turn_003_1940-09-23.md  turn_004_1940-09-30.md  turn_005_1940-10-07.md  turn_006_1940-10-14.md  turn_007_1940-10-21.md  turn_008_1940-10-28.md  turn_057_1941-11-18.md  turn_058_1941-11-18.md  turn_058_1941-11-27.md  turn_059_1941-11-18.md  turn_059_1941-12-06.md  turn_060_1941-11-18.md
src/: __init__.py
src/agents/: _client.py  _player_base.py  board_state.py  journal.py  player_allied.py  player_axis.py  rules_arbiter.py
src/engine/: combat.py  hex_map.py  movement.py  supply.py
src/models/: __init__.py  event.py  game_state.py  hex.py  supply.py  unit.py
tests/: conftest.py  test_board_state.py  test_combat.py  test_data_loading.py  test_hex_map.py  test_journal.py  test_movement.py  test_rules_arbiter.py  test_supply.py  test_supply_chain.py
tests/fixtures/: combat_14_0_anti_armor.json  (+9 more)
tools/: extract_hex_grid.py  extract_pdf_tables.py  parse_vassal.py
(+26 files in other folders)
